RichwoodNew/src/objects/Product_Category__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sort__c</fullName>
        <label>Sort</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1-Belt Cleaners</fullName>
                </value>
                <value>
                    <fullName>2-Replacement Blades</fullName>
                </value>
                <value>
                    <fullName>3-Plows</fullName>
                </value>
                <value>
                    <fullName>4-Parts</fullName>
                </value>
                <value>
                    <fullName>5-Impact Bed Components</fullName>
                </value>
                <value>
                    <fullName>6-Material Containment</fullName>
                </value>
                <value>
                    <fullName>7-Wear Liners</fullName>
                </value>
                <value>
                    <fullName>8-Other</fullName>
                </value>
                <value>
                    <fullName>1-Belt Cleaners_</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>2-Replacement Blades_</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>3-Plows_</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>4-Parts_</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>5-Impact Bed Components_</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>6-Material Containment_</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>7-Wear Liners_</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>8-Other_</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Product Category</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Sort__c</columns>
        <columns>Description__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>